test/Fail/Issue4927-5.err
Issue4927-5.agda:2,8-8
Issue4927-5.agda:2,8: Parse error
@<ERROR>
flat Set
F | _ = Set
...
